[workspace]
members = ["license-store-cache"]

[workspace.package]
version = "0.3.3"
authors = ["figsoda <figsoda@pm.me>"]
edition = "2024"
license = "MPL-2.0"

[workspace.dependencies]
askalono = "0.5.0"

[package]
name = "nix-init"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Generate Nix packages from URLs with hash prefetching, dependency inference, license detection, and more"
readme = "README.md"
homepage = "https://github.com/nix-community/nix-init"
repository = "https://github.com/nix-community/nix-init"
license.workspace = true
keywords = ["cli", "interactive", "generate", "nix", "package"]
categories = ["command-line-utilities"]
include = ["data", "src", "Cargo.lock", "Cargo.toml", "build.rs"]

[dependencies]
anyhow = "1.0.101"
askalono.workspace = true
cargo = "0.94.0"
chumsky = "=1.0.0-alpha.8"
enum_dispatch = "0.3.13"
expand = "0.3.0"
flate2 = "1.1.9"
heck = "0.5.0"
indoc = "2.0.7"
itertools = "0.14.0"
owo-colors = "4.2.3"
parse-display = "0.10.0"
pep-508 = "0.5.0"
rayon = "1.11.0"
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["json"] }
rustc-hash = "2.1.1"
secrecy = { version = "0.10.3", features = ["serde"] }
semver = "1.0.27"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_with = "3.16.1"
serde_yaml = "0.9.34"
shlex = "1.3.0"
spdx = "0.13.3"
tar = "0.4.44"
tempfile = "3.25.0"
time = { version = "0.3.47", features = ["parsing", "serde"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
url = "2.5.8"
versions = "7.0.0"
which = "8.0.0"
xdg = "3.0.0"
zip = "8.0.0"

[dependencies.clap]
version = "4.5.58"
features = ["cargo", "derive", "unicode", "wrap_help"]

[dependencies.rustyline]
version = "17.0.2"
default-features = false
features = ["derive", "with-fuzzy"]

[dependencies.tokio]
version = "1.49.0"
features = ["macros", "process", "rt-multi-thread"]

[dependencies.toml]
version = "1.0.1"
default-features = false
features = ["parse", "serde", "std"]

[build-dependencies]
clap = { version = "4.5.58", features = ["derive"] }
clap_complete = "4.5.66"
clap_mangen = "0.2.31"

[dev-dependencies]
heck = "0.5.0"
insta = "1.46.3"
tempfile = "3.25.0"
trycmd = "1.0.0"

[features]
default = ["vendored"]
vendored = ["cargo/vendored-libgit2", "cargo/vendored-openssl"]

[profile.release]
lto = true
panic = "abort"
codegen-units = 1

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(not_build)"] }
