[workspace]
members = ["license-store-cache"]

[workspace.package]
version = "0.3.6"
authors = ["figsoda <figsoda@pm.me>"]
edition = "2024"
license = "MPL-2.0"

[workspace.dependencies]
askalono = "0.5.0"

[package]
name = "nix-init"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Generate Nix packages from URLs with hash prefetching, dependency inference, license detection, and more"
readme = "README.md"
homepage = "https://github.com/nix-community/nix-init"
repository = "https://github.com/nix-community/nix-init"
license.workspace = true
keywords = ["cli", "interactive", "generate", "nix", "package"]
categories = ["command-line-utilities"]
include = ["data", "src", "Cargo.lock", "Cargo.toml", "build.rs"]

[dependencies]
# keep-sorted start
anyhow = "1.0.102"
askalono.workspace = true
cargo = "0.96.0"
chumsky = "=1.0.0-alpha.8"
enum_dispatch = "0.3.13"
expand = "0.3.0"
flate2 = "1.1.9"
heck = "0.5.0"
indoc = "2.0.7"
itertools = "0.14.0"
owo-colors = "4.3.0"
parse-display = "0.11.0"
pep-508 = "0.5.0"
rayon = "1.12.0"
regex = "1.12.3"
reqwest = { version = "0.13.3", features = ["json"] }
rustc-hash = "2.1.2"
secrecy = { version = "0.10.3", features = ["serde"] }
semver = "1.0.28"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_with = "3.19.0"
serde_yaml = "0.9.34"
shlex = "1.3.0"
spdx = "0.13.4"
tar = "0.4.45"
tempfile = "3.27.0"
time = { version = "0.3.47", features = ["parsing", "serde"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
url = "2.5.8"
versions = "7.0.0"
which = "8.0.2"
xdg = "3.0.0"
zip = "8.6.0"
# keep-sorted end

[dependencies.clap]
version = "4.6.1"
features = ["cargo", "derive", "unicode", "wrap_help"]

[dependencies.rustyline]
version = "18.0.0"
default-features = false
features = ["derive", "with-fuzzy"]

[dependencies.tokio]
version = "1.52.2"
features = ["macros", "process", "rt-multi-thread"]

[dependencies.toml]
version = "1.1.2"
default-features = false
features = ["parse", "serde", "std"]

[build-dependencies]
clap = { version = "4.6.1", features = ["derive"] }
clap_complete = "4.6.3"
clap_mangen = "0.3.0"

[dev-dependencies]
heck = "0.5.0"
insta = "1.47.2"
tempfile = "3.27.0"
trycmd = "1.2.0"

[features]
default = ["vendored"]
vendored = ["cargo/vendored-libgit2", "cargo/vendored-openssl"]

[profile.release]
lto = true
panic = "abort"
codegen-units = 1

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(not_build)"] }
